// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secondary Nav component renders correctly with add activity button 1`] = `
<Fragment>
  <div
    className="pre-button-section-break"
  >
    <Link
      className="ds-c-button"
      onClick={[Function]}
      to="/apd/activities"
    >
      Add another activity
    </Link>
  </div>
  <div
    className="pre-button-section-break"
  >
    <Connect(NextPreviousButtons) />
  </div>
</Fragment>
`;

exports[`Secondary Nav component renders correctly without add activity button 1`] = `
<Fragment>
  <div
    className="pre-button-section-break"
  >
    <Connect(NextPreviousButtons) />
  </div>
</Fragment>
`;
